# pipeline

./: README.md  pipeline.py  pyproject.toml
data/processed/: flavors_processed.parquet
src/: main.py  pipeline.py  visualizar.py
src/pacote_projeto/: main.py  visualizar.py
tests/: test_pipeline_integracao.py  test_transformacoes.py
