[tool.poetry]
name = "pacote-projeto"
version = "0.1.0"
description = "funcoes do projeto"
authors = ["Bruno"]
packages = [
    { include = "pacote_projeto", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
seaborn = "^0.13.2"
matplotlib = "^3.10.7"
pyarrow = "^22.0.0"
pandas = "^2.3.3"
kagglehub = "^0.3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
